--- a/mavenwebappdeployment.yaml
+++ b/mavenwebappdeployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: mavenwebappcontainer
-          image: dockerhandson/maven-web-application:TAG
+          image: hari9966/maven-app
           ports:
             - containerPort: 8080
           resources:
